--- a/B22 Ex02 Amir 208423491 Roni 322437815/B22 Ex02 Amir 208423491 Roni 322437815/B22 Ex02 Amir 208423491 Roni 322437815.csproj
+++ b/B22 Ex02 Amir 208423491 Roni 322437815/B22 Ex02 Amir 208423491 Roni 322437815/B22 Ex02 Amir 208423491 Roni 322437815.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Square.cs" />
     <Compile Include="TheCheckersGame.cs" />
+    <Compile Include="TheCheckersGameCopy.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Ex02.ConsoleUtils">
