--- a/B22 Ex02 Amir 208423491 Roni 322437815/B22 Ex02 Amir 208423491 Roni 322437815/B22 Ex02 Amir 208423491 Roni 322437815.csproj
+++ b/B22 Ex02 Amir 208423491 Roni 322437815/B22 Ex02 Amir 208423491 Roni 322437815/B22 Ex02 Amir 208423491 Roni 322437815.csproj
@@ -37,6 +37,7 @@
     <Compile Include="eGameMode.cs" />
     <Compile Include="ePlayerMovingDirection.cs" />
     <Compile Include="ePlayerType.cs" />
+    <Compile Include="eWinnerPlayer.cs" />
     <Compile Include="InputHandler.cs" />
     <Compile Include="GameMenu.cs" />
     <Compile Include="Player.cs" />
