--- a/B22 Ex02 Amir 208423491 Roni 322437815/CheckersUI/CheckersUI.csproj
+++ b/B22 Ex02 Amir 208423491 Roni 322437815/CheckersUI/CheckersUI.csproj
@@ -31,5 +31,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <ItemGroup>
+    <Compile Include="ConsoleInputManager.cs" />
+    <Compile Include="ConsoleUI.cs" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
