--- a/B22 Ex02 Amir 208423491 Roni 322437815/CheckersUI/CheckersUI.csproj
+++ b/B22 Ex02 Amir 208423491 Roni 322437815/CheckersUI/CheckersUI.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Compile Include="ConsoleInputManager.cs" />
     <Compile Include="ConsoleUI.cs" />
+    <Compile Include="GameDetails.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
