--- a/B22 Ex02 Amir 208423491 Roni 322437815/CheckersGame/CheckersGame.csproj
+++ b/B22 Ex02 Amir 208423491 Roni 322437815/CheckersGame/CheckersGame.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{C43EF4DF-5BB5-41EF-A101-7310B9E7045D}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>CheckersGame</RootNamespace>
     <AssemblyName>CheckersGame</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
