--- a/B22 Ex02 Amir 208423491 Roni 322437815/CheckersUI/CheckersUI.csproj
+++ b/B22 Ex02 Amir 208423491 Roni 322437815/CheckersUI/CheckersUI.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{1EA04D01-AF9E-4498-B89D-86C04DF28B94}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>CheckersUI</RootNamespace>
     <AssemblyName>CheckersUI</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
@@ -30,6 +30,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="ConsoleInputManager.cs" />
