--- a/B22 Ex02 Amir 208423491 Roni 322437815/GameManagement/GameManagement.csproj
+++ b/B22 Ex02 Amir 208423491 Roni 322437815/GameManagement/GameManagement.csproj
@@ -32,7 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject />
+    <StartupObject>GameManagement.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="CheckersGameManager.cs" />
