--- a/B22 Ex02 Amir 208423491 Roni 322437815/CheckersGame/CheckersGame.csproj
+++ b/B22 Ex02 Amir 208423491 Roni 322437815/CheckersGame/CheckersGame.csproj
@@ -35,6 +35,7 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="BackupMoveManager.cs" />
     <Compile Include="Board.cs" />
     <Compile Include="eGameMode.cs" />
     <Compile Include="eWinnerPlayer.cs" />
