--- a/B22 Ex02 Amir 208423491 Roni 322437815/CheckersGame/CheckersGame.csproj
+++ b/B22 Ex02 Amir 208423491 Roni 322437815/CheckersGame/CheckersGame.csproj
@@ -38,7 +38,7 @@
     <Compile Include="BackupMoveManager.cs" />
     <Compile Include="Board.cs" />
     <Compile Include="eGameMode.cs" />
-    <Compile Include="eWinnerPlayer.cs" />
+    <Compile Include="eGameResult.cs" />
     <Compile Include="eDiscType.cs" />
     <Compile Include="eMoveType.cs" />
     <Compile Include="ePlayerMovingDirection.cs" />
