--- a/B22 Ex02 Amir 208423491 Roni 322437815/CheckersUI/CheckersUI.csproj
+++ b/B22 Ex02 Amir 208423491 Roni 322437815/CheckersUI/CheckersUI.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{1EA04D01-AF9E-4498-B89D-86C04DF28B94}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <RootNamespace>CheckersUI</RootNamespace>
     <AssemblyName>CheckersUI</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
@@ -35,9 +35,11 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="ConsoleInputManager.cs" />
     <Compile Include="ConsoleUI.cs" />
+    <Compile Include="RawMoveInputManager.cs" />
+    <Compile Include="ConsoleIOManager.cs" />
     <Compile Include="GameDetails.cs" />
+    <Compile Include="Program.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CheckersGame\CheckersGame.csproj">
